@@ -23,6 +23,7 @@ import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.util.EcoreUtil;
 import org.eclipse.emf.edit.provider.ComposedAdapterFactory;
 import org.eclipse.sirius.web.emf.compatibility.properties.api.IPropertiesValidationProvider;
+import org.eclipse.sirius.web.emf.services.messages.IEMFMessageService;
 import org.eclipse.sirius.web.forms.description.IfDescription;
 import org.eclipse.sirius.web.forms.description.TextfieldDescription;
 import org.eclipse.sirius.web.representations.Failure;
@@ -45,10 +46,14 @@ public class NumberIfDescriptionProvider {
 
     private final IPropertiesValidationProvider propertiesValidationProvider;
 
-    public NumberIfDescriptionProvider(EDataType eDataType, ComposedAdapterFactory composedAdapterFactory, IPropertiesValidationProvider propertiesValidationProvider) {
+    private final IEMFMessageService emfMessageService;
+
+    public NumberIfDescriptionProvider(EDataType eDataType, ComposedAdapterFactory composedAdapterFactory, IPropertiesValidationProvider propertiesValidationProvider,
+            IEMFMessageService emfMessageService) {
         this.eDataType = Objects.requireNonNull(eDataType);
         this.composedAdapterFactory = Objects.requireNonNull(composedAdapterFactory);
         this.propertiesValidationProvider = Objects.requireNonNull(propertiesValidationProvider);
+        this.emfMessageService = Objects.requireNonNull(emfMessageService);
     }
 
     public IfDescription getIfDescription() {
@@ -122,15 +127,20 @@ public class NumberIfDescriptionProvider {
             var optionalEObject = variableManager.get(VariableManager.SELF, EObject.class);
             var optionalEAttribute = variableManager.get(PropertiesDefaultDescriptionProvider.ESTRUCTURAL_FEATURE, EAttribute.class);
 
-            Object value = EcoreUtil.createFromString(this.eDataType, newValue);
+            IStatus result = new Failure(""); //$NON-NLS-1$
             if (optionalEObject.isPresent() && optionalEAttribute.isPresent()) {
                 EObject eObject = optionalEObject.get();
                 EAttribute eAttribute = optionalEAttribute.get();
 
-                eObject.eSet(eAttribute, value);
-                return new Success();
+                try {
+                    Object value = EcoreUtil.createFromString(this.eDataType, newValue);
+                    eObject.eSet(eAttribute, value);
+                    result = new Success();
+                } catch (NumberFormatException nfe) {
+                    result = new Failure(this.emfMessageService.invalidNumber(newValue));
+                }
             }
-            return new Failure(""); //$NON-NLS-1$
+            return result;
         };
     }
 
