@@ -12,3 +12,4 @@
 ################################################################################################
 INVALID_INPUT=Invalid input type, "{0}" has been received while "{1}" was expected
 UNEXPECTED_ERROR=An unexpected error has occurred, please contact the server administrator
+INVALID_NUMBER=The new value "{0}" is not a valid number
